--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
   </head>
-  <body>
+  <body background="eye.png">
     <header> 
     </header>
     <main>
@@ -21,8 +21,11 @@
             </button>
          </div>
          <div id="pantalla2" style="display: none">
-            <h1>Tu tarjeta ha sido validada</h1> 
+            <h1>Tu tarjeta <p id="maskify"></p> ha sido validada</h1> 
          </div>
+         <div id="pantalla3" style="display: none">
+          <h1>Tu tarjeta <p id="maskify2"></p> no es válida</h1> 
+       </div>
      </div>
     </main>
     <footer></footer>
